login form handling validation, ready for db auth

--- a/styles/abstract/_variables.scss
+++ b/styles/abstract/_variables.scss
@@ -6,6 +6,8 @@ $colors: (
   green: #96bb7c,
   lightgreen: #d6efc7,
   white: #ffffff,
+  border: lightslategrey,
+  error: #f2304d,
 );
 
 // ================ BREAKPOINTS ============== //
