--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -10,12 +10,13 @@
 // ================ COMPONENTS =============== //
 @import "component/custom-divider";
 @import "component/floating-label-group";
-@import "component/form";
+@import "component/login-form";
 
 // ================= LAYOUTS ================= //
 @import "layout/header";
 @import "layout/main";
 @import "layout/article";
+@import "layout/form";
 @import "layout/input";
 @import "layout/footer";
 
