--- a/styles/component/_custom-divider.scss
+++ b/styles/component/_custom-divider.scss
@@ -1,6 +1,7 @@
 .custom-divider {
   margin: 1.25rem 0 1.5rem;
   width: 100%;
+  height: 3.2rem;
   display: flex;
   justify-content: center;
   align-items: center;
