--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -1,4 +1,6 @@
 header {
+  display: flex;
+  justify-content: space-between;
   width: 100vw;
   background-color: map_get($colors, darkgreen);
   padding: 30px;
