--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -14,6 +14,7 @@
 @import "component/custom-divider";
 @import "component/floating-label-group";
 @import "component/login-form";
+@import "component/navbar-custom";
 
 // ================= LAYOUTS ================= //
 @import "layout/header";
