adding admin management table

--- a/styles/layout/_article.scss
+++ b/styles/layout/_article.scss
@@ -9,6 +9,6 @@ article {
     text-transform: uppercase;
     font-size: 3.2rem;
     font-weight: 700;
-    margin-bottom: 30px;
+    margin-bottom: 1.4rem;
   }
 }
