--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10085,7 +10085,7 @@ article .article-header {
   text-transform: uppercase;
   font-size: 3.2rem;
   font-weight: 700;
-  margin-bottom: 30px;
+  margin-bottom: 1.4rem;
 }
 
 form button {
