--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,277 @@
 @charset "UTF-8";
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+}
+
+html {
+  font-size: 62.5%;
+  margin: 0;
+}
+
+body {
+  box-sizing: border-box;
+  border: none;
+  margin: 0;
+  background-color: white;
+  margin-top: 5rem !important;
+}
+
+:not(.fa),
+:not(.far),
+:not(.fas) {
+  font-family: "Montserrat", sans-serif;
+}
+
+.limit-width-xs {
+  max-width: 320px;
+  margin: 0 auto;
+}
+
+.limit-width-sm {
+  max-width: 576px;
+  margin: 0 auto;
+}
+
+.limit-width-md {
+  max-width: 768px;
+  margin: 0 auto;
+}
+
+.limit-width-lg {
+  max-width: 992px;
+  margin: 0 auto;
+}
+
+.limit-width-xl {
+  max-width: 1224px;
+  margin: 0 auto;
+}
+
+.limit-width-xl2 {
+  max-width: 1424px;
+  margin: 0 auto;
+}
+
+.limit-width-xl3 {
+  max-width: 1824px;
+  margin: 0 auto;
+}
+
+.custom-divider {
+  margin: 1.25rem 0 1.5rem;
+  width: 100%;
+  height: 3.2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.custom-divider__line {
+  width: 100%;
+  max-width: 12rem;
+  height: 0.4rem;
+  background-color: #184d47;
+  border-radius: 1rem;
+  border-color: #184d47 !important;
+}
+.custom-divider__icon {
+  color: #184d47 !important;
+  font-size: 3.2rem;
+  margin: -0.2rem 1.5rem 0;
+}
+
+.floating-label-group {
+  position: relative;
+}
+.floating-label-group label {
+  position: absolute;
+  top: 1.2rem;
+  left: 0;
+  color: #184d47;
+  font-size: 1.2rem;
+  font-weight: 600;
+  transition: all 0.1s ease-in-out;
+  opacity: 0;
+}
+.floating-label-group input:not(:placeholder-shown) ~ label {
+  opacity: 1;
+  top: 0;
+}
+.floating-label-group--radio, .floating-label-group--select, .floating-label-group--checkbox {
+  margin-top: 1rem;
+}
+.floating-label-group--radio .group-label, .floating-label-group--select .group-label, .floating-label-group--checkbox .group-label {
+  color: #184d47;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+.floating-label-group--radio input, .floating-label-group--select input, .floating-label-group--checkbox input {
+  margin-left: 16px;
+}
+.floating-label-group--radio select, .floating-label-group--select select, .floating-label-group--checkbox select {
+  margin-left: 16px;
+}
+.floating-label-group .form-error {
+  margin: 0.8rem 0 0 0;
+  color: #f2304d;
+  font-size: 1.6rem;
+  padding: 0 0 0 0.8rem;
+}
+
+.login-form {
+  margin-top: 45px;
+}
+.login-form button {
+  margin-top: 20px;
+  margin-left: auto;
+}
+
+.navbar-custom {
+  background-color: #184d47 !important;
+}
+.navbar-custom .navbar-brand {
+  font-size: 2.4rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #eebb4d;
+}
+.navbar-custom .navbar-toggler {
+  border: 0.25rem solid lightslategrey;
+}
+.navbar-custom .navbar-toggler-icon {
+  font-size: 2rem;
+}
+.navbar-custom .navbar-nav .navbar-text {
+  border-bottom: 1px solid lightslategrey;
+  max-width: 400px;
+}
+.navbar-custom .navbar-nav .nav-link {
+  font-size: 1.8rem;
+  font-weight: 600;
+  color: #eebb4d;
+}
+
+.data-table {
+  margin-bottom: 1.2rem;
+}
+.data-table tbody td i {
+  font-size: 1.6rem;
+  margin: 0 0.4rem;
+  cursor: pointer;
+}
+.data-table ~ .btn {
+  display: block;
+  color: white;
+  font-size: 1.6rem;
+  margin-left: auto;
+  width: fit-content;
+}
+.data-table ~ .btn:hover, .data-table ~ .btn:focus {
+  color: white;
+}
+.data-table ~ .btn i {
+  margin-right: 0.8rem;
+  margin-top: -0.2rem;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  background-color: #184d47;
+  padding: 30px;
+  color: white;
+  flex: 0 0 auto;
+}
+header h1 {
+  font-weight: 700;
+  text-transform: uppercase;
+}
+@media (min-width: 768px) {
+  header {
+    padding: 30px 10vw;
+  }
+}
+
+main {
+  flex: 1 0 auto;
+  background-color: #ffffff;
+}
+
+article {
+  background-color: white;
+  border-radius: 8px;
+  padding: 30px;
+  color: #184d47;
+}
+article .article-header {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 3.2rem;
+  font-weight: 700;
+  margin-bottom: 1.4rem;
+}
+
+form button {
+  border: none;
+  background-color: #184d47;
+  padding: 0.8rem 1.8rem;
+  border-radius: 0.4rem;
+  color: white;
+  font-weight: 600;
+  font-size: 1.6rem;
+}
+
+input:not([type=radio]):not([type=checkbox]) {
+  border: none;
+  padding: 2.5rem 1.5rem 1.5rem;
+  font-weight: 400;
+  border-bottom: 1px solid lightslategrey;
+  width: 100%;
+  outline: none;
+  font-size: 1.8rem;
+}
+input:not([type=radio]):not([type=checkbox])[type=password]:not(:placeholder-shown) {
+  font-weight: 900;
+  letter-spacing: 0.3rem;
+}
+
+select {
+  border: none;
+  padding: 1.5rem;
+  font-weight: 400;
+  border-bottom: 1px solid lightslategrey;
+  outline: none;
+  width: 100%;
+}
+
+footer {
+  background-color: #184d47;
+  padding: 30px;
+  color: #eebb4d;
+  flex: 0 0 auto;
+  margin-top: auto;
+}
+footer p {
+  margin-left: auto;
+}
+
+.hsef {
+  font-size: 1.4rem;
+  min-height: calc(100vh - 5rem);
+  display: flex;
+  flex-flow: column nowrap;
+}
+.hsef main article h2 {
+  text-align: center;
+}
+
 /*!
  * Bootstrap v4.5.2 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
@@ -19,6 +292,13 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
+  --yellow: #eebb4d;
+  --darkgreen: #184d47;
+  --green: #96bb7c;
+  --lightgreen: #d6efc7;
+  --white: #ffffff;
+  --border: lightslategrey;
+  --error: #f2304d;
   --primary: #007bff;
   --secondary: #6c757d;
   --success: #28a745;
@@ -27,6 +307,8 @@
   --danger: #dc3545;
   --light: #f8f9fa;
   --dark: #343a40;
+  --gold: #eebb4d;
+  --darkgreen: #184d47;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
@@ -1855,6 +2137,46 @@ pre code {
   background-color: #b9bbbe;
 }
 
+.table-gold,
+.table-gold > th,
+.table-gold > td {
+  background-color: #faeccd;
+}
+.table-gold th,
+.table-gold td,
+.table-gold thead th,
+.table-gold tbody + tbody {
+  border-color: #f6dca2;
+}
+
+.table-hover .table-gold:hover {
+  background-color: #f8e3b6;
+}
+.table-hover .table-gold:hover > td,
+.table-hover .table-gold:hover > th {
+  background-color: #f8e3b6;
+}
+
+.table-darkgreen,
+.table-darkgreen > th,
+.table-darkgreen > td {
+  background-color: #becdcb;
+}
+.table-darkgreen th,
+.table-darkgreen td,
+.table-darkgreen thead th,
+.table-darkgreen tbody + tbody {
+  border-color: #87a29f;
+}
+
+.table-hover .table-darkgreen:hover {
+  background-color: #b0c2bf;
+}
+.table-hover .table-darkgreen:hover > td,
+.table-hover .table-darkgreen:hover > th {
+  background-color: #b0c2bf;
+}
+
 .table-active,
 .table-active > th,
 .table-active > td {
@@ -2654,6 +2976,66 @@ fieldset:disabled a.btn {
   box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5);
 }
 
+.btn-gold {
+  color: #212529;
+  background-color: #eebb4d;
+  border-color: #eebb4d;
+}
+.btn-gold:hover {
+  color: #212529;
+  background-color: #ebae2a;
+  border-color: #eaa91e;
+}
+.btn-gold:focus, .btn-gold.focus {
+  color: #212529;
+  background-color: #ebae2a;
+  border-color: #eaa91e;
+  box-shadow: 0 0 0 0.2rem rgba(207, 165, 72, 0.5);
+}
+.btn-gold.disabled, .btn-gold:disabled {
+  color: #212529;
+  background-color: #eebb4d;
+  border-color: #eebb4d;
+}
+.btn-gold:not(:disabled):not(.disabled):active, .btn-gold:not(:disabled):not(.disabled).active, .show > .btn-gold.dropdown-toggle {
+  color: #212529;
+  background-color: #eaa91e;
+  border-color: #e5a416;
+}
+.btn-gold:not(:disabled):not(.disabled):active:focus, .btn-gold:not(:disabled):not(.disabled).active:focus, .show > .btn-gold.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.2rem rgba(207, 165, 72, 0.5);
+}
+
+.btn-darkgreen {
+  color: #fff;
+  background-color: #184d47;
+  border-color: #184d47;
+}
+.btn-darkgreen:hover {
+  color: #fff;
+  background-color: #0f302c;
+  border-color: #0c2623;
+}
+.btn-darkgreen:focus, .btn-darkgreen.focus {
+  color: #fff;
+  background-color: #0f302c;
+  border-color: #0c2623;
+  box-shadow: 0 0 0 0.2rem rgba(59, 104, 99, 0.5);
+}
+.btn-darkgreen.disabled, .btn-darkgreen:disabled {
+  color: #fff;
+  background-color: #184d47;
+  border-color: #184d47;
+}
+.btn-darkgreen:not(:disabled):not(.disabled):active, .btn-darkgreen:not(:disabled):not(.disabled).active, .show > .btn-darkgreen.dropdown-toggle {
+  color: #fff;
+  background-color: #0c2623;
+  border-color: #091c1a;
+}
+.btn-darkgreen:not(:disabled):not(.disabled):active:focus, .btn-darkgreen:not(:disabled):not(.disabled).active:focus, .show > .btn-darkgreen.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.2rem rgba(59, 104, 99, 0.5);
+}
+
 .btn-outline-primary {
   color: #007bff;
   border-color: #007bff;
@@ -2852,6 +3234,56 @@ fieldset:disabled a.btn {
 }
 .btn-outline-dark:not(:disabled):not(.disabled):active:focus, .btn-outline-dark:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-dark.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
+}
+
+.btn-outline-gold {
+  color: #eebb4d;
+  border-color: #eebb4d;
+}
+.btn-outline-gold:hover {
+  color: #212529;
+  background-color: #eebb4d;
+  border-color: #eebb4d;
+}
+.btn-outline-gold:focus, .btn-outline-gold.focus {
+  box-shadow: 0 0 0 0.2rem rgba(238, 187, 77, 0.5);
+}
+.btn-outline-gold.disabled, .btn-outline-gold:disabled {
+  color: #eebb4d;
+  background-color: transparent;
+}
+.btn-outline-gold:not(:disabled):not(.disabled):active, .btn-outline-gold:not(:disabled):not(.disabled).active, .show > .btn-outline-gold.dropdown-toggle {
+  color: #212529;
+  background-color: #eebb4d;
+  border-color: #eebb4d;
+}
+.btn-outline-gold:not(:disabled):not(.disabled):active:focus, .btn-outline-gold:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-gold.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.2rem rgba(238, 187, 77, 0.5);
+}
+
+.btn-outline-darkgreen {
+  color: #184d47;
+  border-color: #184d47;
+}
+.btn-outline-darkgreen:hover {
+  color: #fff;
+  background-color: #184d47;
+  border-color: #184d47;
+}
+.btn-outline-darkgreen:focus, .btn-outline-darkgreen.focus {
+  box-shadow: 0 0 0 0.2rem rgba(24, 77, 71, 0.5);
+}
+.btn-outline-darkgreen.disabled, .btn-outline-darkgreen:disabled {
+  color: #184d47;
+  background-color: transparent;
+}
+.btn-outline-darkgreen:not(:disabled):not(.disabled):active, .btn-outline-darkgreen:not(:disabled):not(.disabled).active, .show > .btn-outline-darkgreen.dropdown-toggle {
+  color: #fff;
+  background-color: #184d47;
+  border-color: #184d47;
+}
+.btn-outline-darkgreen:not(:disabled):not(.disabled):active:focus, .btn-outline-darkgreen:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-darkgreen.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.2rem rgba(24, 77, 71, 0.5);
 }
 
 .btn-link {
@@ -4746,6 +5178,32 @@ a.badge-dark:focus, a.badge-dark.focus {
   box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
 }
 
+.badge-gold {
+  color: #212529;
+  background-color: #eebb4d;
+}
+a.badge-gold:hover, a.badge-gold:focus {
+  color: #212529;
+  background-color: #eaa91e;
+}
+a.badge-gold:focus, a.badge-gold.focus {
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(238, 187, 77, 0.5);
+}
+
+.badge-darkgreen {
+  color: #fff;
+  background-color: #184d47;
+}
+a.badge-darkgreen:hover, a.badge-darkgreen:focus {
+  color: #fff;
+  background-color: #0c2623;
+}
+a.badge-darkgreen:focus, a.badge-darkgreen.focus {
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(24, 77, 71, 0.5);
+}
+
 .jumbotron {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
@@ -4885,6 +5343,30 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 .alert-dark .alert-link {
   color: #040505;
+}
+
+.alert-gold {
+  color: #7c6128;
+  background-color: #fcf1db;
+  border-color: #faeccd;
+}
+.alert-gold hr {
+  border-top-color: #f8e3b6;
+}
+.alert-gold .alert-link {
+  color: #55431c;
+}
+
+.alert-darkgreen {
+  color: #0c2825;
+  background-color: #d1dbda;
+  border-color: #becdcb;
+}
+.alert-darkgreen hr {
+  border-top-color: #b0c2bf;
+}
+.alert-darkgreen .alert-link {
+  color: #000101;
 }
 
 @keyframes progress-bar-stripes {
@@ -5242,6 +5724,34 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   background-color: #1b1e21;
   border-color: #1b1e21;
+}
+
+.list-group-item-gold {
+  color: #7c6128;
+  background-color: #faeccd;
+}
+.list-group-item-gold.list-group-item-action:hover, .list-group-item-gold.list-group-item-action:focus {
+  color: #7c6128;
+  background-color: #f8e3b6;
+}
+.list-group-item-gold.list-group-item-action.active {
+  color: #fff;
+  background-color: #7c6128;
+  border-color: #7c6128;
+}
+
+.list-group-item-darkgreen {
+  color: #0c2825;
+  background-color: #becdcb;
+}
+.list-group-item-darkgreen.list-group-item-action:hover, .list-group-item-darkgreen.list-group-item-action:focus {
+  color: #0c2825;
+  background-color: #b0c2bf;
+}
+.list-group-item-darkgreen.list-group-item-action.active {
+  color: #fff;
+  background-color: #0c2825;
+  border-color: #0c2825;
 }
 
 .close {
@@ -6079,6 +6589,26 @@ button.bg-dark:focus {
   background-color: #1d2124 !important;
 }
 
+.bg-gold {
+  background-color: #eebb4d !important;
+}
+
+a.bg-gold:hover, a.bg-gold:focus,
+button.bg-gold:hover,
+button.bg-gold:focus {
+  background-color: #eaa91e !important;
+}
+
+.bg-darkgreen {
+  background-color: #184d47 !important;
+}
+
+a.bg-darkgreen:hover, a.bg-darkgreen:focus,
+button.bg-darkgreen:hover,
+button.bg-darkgreen:focus {
+  background-color: #0c2623 !important;
+}
+
 .bg-white {
   background-color: #fff !important;
 }
@@ -6157,6 +6687,14 @@ button.bg-dark:focus {
 
 .border-dark {
   border-color: #343a40 !important;
+}
+
+.border-gold {
+  border-color: #eebb4d !important;
+}
+
+.border-darkgreen {
+  border-color: #184d47 !important;
 }
 
 .border-white {
@@ -9754,6 +10292,22 @@ a.text-dark:hover, a.text-dark:focus {
   color: #121416 !important;
 }
 
+.text-gold {
+  color: #eebb4d !important;
+}
+
+a.text-gold:hover, a.text-gold:focus {
+  color: #da9b15 !important;
+}
+
+.text-darkgreen {
+  color: #184d47 !important;
+}
+
+a.text-darkgreen:hover, a.text-darkgreen:focus {
+  color: #061311 !important;
+}
+
 .text-body {
   color: #212529 !important;
 }
@@ -9892,254 +10446,6 @@ h3 {
     color: inherit;
     border-color: #dee2e6;
   }
-}
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-a {
-  text-decoration: none;
-}
-
-html {
-  font-size: 62.5%;
-  margin: 0;
-}
-
-body {
-  box-sizing: border-box;
-  border: none;
-  margin: 0;
-  background-color: white;
-}
-
-:not(.fa),
-:not(.far),
-:not(.fas) {
-  font-family: "Montserrat", sans-serif;
-}
-
-.limit-width-xs {
-  max-width: 320px;
-  margin: 0 auto;
-}
-
-.limit-width-sm {
-  max-width: 576px;
-  margin: 0 auto;
-}
-
-.limit-width-md {
-  max-width: 768px;
-  margin: 0 auto;
-}
-
-.limit-width-lg {
-  max-width: 992px;
-  margin: 0 auto;
-}
-
-.limit-width-xl {
-  max-width: 1224px;
-  margin: 0 auto;
-}
-
-.limit-width-xl2 {
-  max-width: 1424px;
-  margin: 0 auto;
-}
-
-.limit-width-xl3 {
-  max-width: 1824px;
-  margin: 0 auto;
-}
-
-.custom-divider {
-  margin: 1.25rem 0 1.5rem;
-  width: 100%;
-  height: 3.2rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.custom-divider__line {
-  width: 100%;
-  max-width: 12rem;
-  height: 0.4rem;
-  background-color: #184d47;
-  border-radius: 1rem;
-  border-color: #184d47 !important;
-}
-.custom-divider__icon {
-  color: #184d47 !important;
-  font-size: 3.2rem;
-  margin: -0.2rem 1.5rem 0;
-}
-
-.floating-label-group {
-  position: relative;
-}
-.floating-label-group label {
-  position: absolute;
-  top: 1.2rem;
-  left: 0;
-  color: #184d47;
-  font-size: 1.2rem;
-  font-weight: 600;
-  transition: all 0.1s ease-in-out;
-  opacity: 0;
-}
-.floating-label-group input:not(:placeholder-shown) ~ label {
-  opacity: 1;
-  top: 0;
-}
-.floating-label-group--radio, .floating-label-group--select, .floating-label-group--checkbox {
-  margin-top: 1rem;
-}
-.floating-label-group--radio .group-label, .floating-label-group--select .group-label, .floating-label-group--checkbox .group-label {
-  color: #184d47;
-  font-size: 1.2rem;
-  font-weight: 600;
-}
-.floating-label-group--radio input, .floating-label-group--select input, .floating-label-group--checkbox input {
-  margin-left: 16px;
-}
-.floating-label-group--radio select, .floating-label-group--select select, .floating-label-group--checkbox select {
-  margin-left: 16px;
-}
-.floating-label-group .form-error {
-  margin: 0.8rem 0 0 0;
-  color: #f2304d;
-  font-size: 1.6rem;
-  padding: 0 0 0 0.8rem;
-}
-
-.login-form {
-  margin-top: 45px;
-}
-.login-form button {
-  margin-top: 20px;
-  margin-left: auto;
-}
-
-.navbar-custom {
-  background-color: #184d47 !important;
-}
-.navbar-custom .navbar-brand {
-  font-size: 2.4rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #eebb4d;
-}
-.navbar-custom .navbar-toggler {
-  border: 0.25rem solid lightslategrey;
-}
-.navbar-custom .navbar-toggler-icon {
-  font-size: 2rem;
-}
-.navbar-custom .navbar-nav .navbar-text {
-  border-bottom: 1px solid lightslategrey;
-  max-width: 400px;
-}
-.navbar-custom .navbar-nav .nav-link {
-  font-size: 1.8rem;
-  font-weight: 600;
-  color: #eebb4d;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-  background-color: #184d47;
-  padding: 30px;
-  color: white;
-  flex: 0 0 auto;
-}
-header h1 {
-  font-weight: 700;
-  text-transform: uppercase;
-}
-@media (min-width: 768px) {
-  header {
-    padding: 30px 10vw;
-  }
-}
-
-main {
-  flex: 1 0 auto;
-  background-color: #ffffff;
-}
-
-article {
-  background-color: white;
-  border-radius: 8px;
-  padding: 30px;
-  color: #184d47;
-}
-article .article-header {
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 3.2rem;
-  font-weight: 700;
-  margin-bottom: 1.4rem;
-}
-
-form button {
-  border: none;
-  background-color: #184d47;
-  padding: 0.8rem 1.8rem;
-  border-radius: 0.4rem;
-  color: white;
-  font-weight: 600;
-  font-size: 1.6rem;
-}
-
-input:not([type=radio]):not([type=checkbox]) {
-  border: none;
-  padding: 2.5rem 1.5rem 1.5rem;
-  font-weight: 400;
-  border-bottom: 1px solid lightslategrey;
-  width: 100%;
-  outline: none;
-  font-size: 1.8rem;
-}
-input:not([type=radio]):not([type=checkbox])[type=password]:not(:placeholder-shown) {
-  font-weight: 900;
-  letter-spacing: 0.3rem;
-}
-
-select {
-  border: none;
-  padding: 1.5rem;
-  font-weight: 400;
-  border-bottom: 1px solid lightslategrey;
-  outline: none;
-  width: 100%;
-}
-
-footer {
-  background-color: #184d47;
-  padding: 30px;
-  color: #eebb4d;
-  flex: 0 0 auto;
-  margin-top: auto;
-}
-footer p {
-  margin-left: auto;
-}
-
-.lab1 {
-  font-size: 1.4rem;
-  min-height: 100vh;
-  display: flex;
-  flex-flow: column nowrap;
-}
-.lab1 main article h2 {
-  text-align: center;
 }
 
 /*# sourceMappingURL=styles.css.map */
