--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,6 +1,3 @@
-// ================= VENDORS ================= //
-@import "vendor/bootstrap/bootstrap";
-
 // ================ ABSTRACTS ================ //
 @import "abstract/mixins";
 @import "abstract/variables";
@@ -15,6 +12,7 @@
 @import "component/floating-label-group";
 @import "component/login-form";
 @import "component/navbar-custom";
+@import "component/data-table";
 
 // ================= LAYOUTS ================= //
 @import "layout/header";
@@ -25,4 +23,7 @@
 @import "layout/footer";
 
 // ================== Pages ================== //
-@import "page/lab1";
+@import "page/hsef";
+
+// ================= VENDORS ================= //
+@import "vendor/bootstrap/bootstrap";
