--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,6 +65,22 @@ body {
   margin: 0 auto;
 }
 
+.btn.btn-gold {
+  display: block;
+  color: white;
+  font-size: 1.6rem;
+  margin-left: auto;
+  width: fit-content;
+  font-weight: 500;
+}
+.btn.btn-gold:hover, .btn.btn-gold:focus {
+  color: white;
+}
+.btn.btn-gold i {
+  margin-right: 0.8rem;
+  margin-top: -0.2rem;
+}
+
 .custom-divider {
   margin: 1.25rem 0 1.5rem;
   width: 100%;
@@ -165,20 +181,6 @@ body {
   font-size: 1.6rem;
   margin: 0 0.4rem;
   cursor: pointer;
-}
-.data-table ~ .btn {
-  display: block;
-  color: white;
-  font-size: 1.6rem;
-  margin-left: auto;
-  width: fit-content;
-}
-.data-table ~ .btn:hover, .data-table ~ .btn:focus {
-  color: white;
-}
-.data-table ~ .btn i {
-  margin-right: 0.8rem;
-  margin-top: -0.2rem;
 }
 
 header {
