--- a/styles/component/_data-table.scss
+++ b/styles/component/_data-table.scss
@@ -1,13 +1,49 @@
 .data-table {
   margin-bottom: 1.2rem;
 
-  tbody {
-    td {
-      i {
-        font-size: 1.6rem;
-        margin: 0 .4rem;
-        cursor: pointer;
+  .row {
+    align-items: center;
+    margin: .4rem 0;
+    flex-wrap: nowrap;
+    overflow-x: hidden;
+
+    div {
+      transition: all 0.4s ease;
+    }
+
+    &:not(:first-child) {
+      border-radius: .4rem;
+    }
+
+    p {
+      margin: 0;
+    }
+
+    .tool-icon {
+      cursor: pointer;
+      padding: 1rem;
+      font-size: 1.8rem;
+      background-color: transparent;
+      border: none;
+      flex: 1 0 auto;
+      display: flex;
+      justify-content: center;
+
+      &:first-child {
+        border-radius: .4rem 0 0 .4rem;
       }
+
+      &:last-child {
+        border-radius: 0 .4rem .4rem 0;
+      }
+
+      &:focus,&:active {
+        outline: 0;
+      }
+    }
+
+    &:nth-child(even):not(:last-child) {
+      background-color: transparentize(map_get($colors, darkgreen), .8);
     }
   }
 }
