--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,7 +21,7 @@ body {
   border: none;
   margin: 0;
   background-color: white;
-  margin-top: 3rem !important;
+  margin-top: 5rem !important;
 }
 
 :not(.fa),
@@ -86,6 +86,32 @@ body {
 .row.no-gutters > [class^=col-], .row.no-gutters > [class*=" col-"] {
   padding-right: 0;
   padding-left: 0;
+}
+
+.row.row-sliding {
+  flex-wrap: nowrap;
+  overflow-x: hidden;
+}
+.row.row-sliding .tool-icon {
+  cursor: pointer;
+  padding: 1rem;
+  font-size: 1.8rem;
+  background-color: transparent;
+  border: none;
+  flex: 1 0 auto;
+  display: flex;
+  justify-content: center;
+}
+.row.row-sliding .tool-icon:first-child {
+  border-top-left-radius: 0.4rem;
+  border-bottom-left-radius: 0.4rem;
+}
+.row.row-sliding .tool-icon:last-child {
+  border-top-right-radius: 0.4rem;
+  border-bottom-right-radius: 0.4rem;
+}
+.row.row-sliding .tool-icon:focus, .row.row-sliding .tool-icon:active {
+  outline: 0;
 }
 
 .btn.btn-gold {
@@ -203,8 +229,6 @@ body {
 .data-table .row {
   align-items: center;
   margin: 0.4rem 0;
-  flex-wrap: nowrap;
-  overflow-x: hidden;
 }
 .data-table .row div {
   transition: all 0.4s ease;
@@ -214,25 +238,6 @@ body {
 }
 .data-table .row p {
   margin: 0;
-}
-.data-table .row .tool-icon {
-  cursor: pointer;
-  padding: 1rem;
-  font-size: 1.8rem;
-  background-color: transparent;
-  border: none;
-  flex: 1 0 auto;
-  display: flex;
-  justify-content: center;
-}
-.data-table .row .tool-icon:first-child {
-  border-radius: 0.4rem 0 0 0.4rem;
-}
-.data-table .row .tool-icon:last-child {
-  border-radius: 0 0.4rem 0.4rem 0;
-}
-.data-table .row .tool-icon:focus, .data-table .row .tool-icon:active {
-  outline: 0;
 }
 .data-table .row:nth-child(even):not(:last-child) {
   background-color: rgba(24, 77, 71, 0.2);
@@ -320,7 +325,7 @@ footer p {
 
 .hsef {
   font-size: 1.4rem;
-  min-height: calc(100vh - 3rem);
+  min-height: calc(100vh - 5rem);
   display: flex;
   flex-flow: column nowrap;
 }
